...
class MyDatabase extends _$MyDatabase {
  MyDatabase([QueryExecutor? e]) : super(e ?? _openConnection());

  Future<List<TransactionCategory>> findAnimalsByLegs(int legCount) {
    return (select(categoriesTable)..where(
          (a) =>
              a.name.contains("Default") |
              a.name.contains("Food") |
              a.name.contains("Rent") |
              a.name.contains("Shopping") |
              a.name.contains("Utility"),
        ))
        .get();
...
    final allCategories = await select(categoriesTable).get();
    if (allCategories.isEmpty) {
      await batch(
        (batch) => batch.insertAll(categoriesTable, [
          CategoriesTableCompanion.insert(
            id: "id1",
            name: "Default",
            iconCodepoint: Icons.account_circle_rounded.codePoint,
            color: Colors.blue.toARGB32(),
            order: 0,
            isArchived: false,
          ),
          CategoriesTableCompanion.insert(
...
    )..where((t) => t.id.equals(target.id))).write(
      TransactionTableCompanion(
        title: Value(target.title),
        additionalInfo: Value(target.additionalInfo),
        categoryID: Value(target.categoryID),
        accountID: Value(target.accountID),
        amount: Value(target.amount),
        recorded: Value(target.recorded),
        location: Value(target.location),
      ),
    );
  }

...
