...
  }

  List<NavigationDestination> navDestinations = const [
    NavigationDestination(
      icon: Icon(Icons.my_library_books_outlined),
      selectedIcon: Icon(Icons.my_library_books_rounded),
      label: 'Entries',
    ),
    NavigationDestination(
      icon: Icon(Icons.account_balance_wallet_outlined),
      selectedIcon: Icon(Icons.account_balance_wallet_rounded),
      label: 'Accounts',
    ),
    NavigationDestination(
      icon: Icon(Icons.pie_chart_outline_rounded),
      selectedIcon: Icon(Icons.pie_chart_rounded),
      label: 'Analysis',
    ),
  ];

  List<Widget> widgetOptions = <Widget>[
    const Overview(),
    const Accounts(),
...
                    .showBottomSheet((context) => const ThemePicker());
              } else if (value == "cat") {
                showModalBottomSheet(
                    showDragHandle: true,
                    isScrollControlled: true,
                    context: context,
                    builder: (context) => const Categories());
              } else if (value == "settings") {
                Navigator.of(context).pushNamed("/settings");
              }
            },
            itemBuilder: (context) => {
              "theme": "Change Theme",
...
              key: listOfKeys[4],
              // ? OpenContainer has its own elevation
              elevation: 0,
              highlightElevation: 0,
              hoverElevation: 0,
              onPressed: openContainer,
              label: const Text("New Entry"),
              icon: const Icon(Icons.add),
            );
          },
          openBuilder: (_, closeContainer) {
            return const EntryEditor();
          }),
...
