...
) {
  final lowercaseType = type.toLowerCase();
  return SnackBar(
    duration: const Duration(seconds: 1),
    content: Text("There are still transactions under this $lowercaseType"),
    action: SnackBarAction(
      label: "Delete",
      onPressed: () => {
        showDialog<void>(
          context: context,
          builder: (context) => AlertDialog(
            title: const Text("Are you sure?"),
            content: Text(
...
            actions: [
              TextButton(
                onPressed: () {
                  Navigator.of(context).pop();
                  onPressed();
                },
                child: const Text("Yes"),
              ),
              TextButton(
                onPressed: () {
                  Navigator.of(context).pop();
                },
                child: const Text("No"),
...
