...
      maintainState: true,
      child: AnimatedOpacity(
        duration: const Duration(milliseconds: 300),
        opacity: !keyboardIsOpen ? 1 : 0,
        child: FloatingActionButton.extended(
          onPressed: onPressed,
          label: const Text("Save"),
          icon: const Icon(Icons.save_rounded),
        ),
      ),
    );
  }
}
...
