...
    GetStorage().write("welcome", true);
  }

  @override
  Widget build(BuildContext context) {
    return IntroductionScreen(
      done: const Text("Start"),
      next: const Text("Next"),
      skip: const Text("Skip"),
      onDone: goHome,
      onSkip: () {
        goHome();
        ref.read(entriesTutorialCompletedProvider.notifier).state = true;
        ref.read(analysisTutorialCompletedProvider.notifier).state = true;
...
