...
                        ),
                      const SizedBox(width: 10),
                      OutlinedButton(
                        onPressed: () {
                          controller.next();
                        },
                        child: Text(listOfKeys.last != key ? "NEXT" : "FINISH"),
                      ),
                    ],
                  ),
                ],
              ),
            );
...
